--- a/index.html
+++ b/index.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Starfall</title>
-    <script src="scr/app.js"></script>
+    <title>Game</title>
   </head>
   <body>
-    <div id="game"></div>
-    
     <div id="app"></div>
   </body>
 </html>
